--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -62,7 +62,6 @@ footer {
 
 .banner {
   .carousel-caption {
-    padding: 100 0;
     h2 {
       padding: 30px 0px;
       background-color: #e1e1e1;
@@ -102,6 +101,7 @@ footer {
     align-items: center;
     justify-content: center;
     a {
+      font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
       font-size: 20px;
       color: #fff;
       text-shadow: #000 6px 0 7px;
