--- a/scss/_ss22.scss
+++ b/scss/_ss22.scss
@@ -14,46 +14,50 @@
   background-color: #fff;
   padding: 40px 0px;
   text-align: center;
-  -webkit-text-stroke: 2px #000;
-  color: transparent;
   font-size: 2em;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
-
 .tarjeta_ss {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin-bottom: 10px;
-  justify-items: center;
-  align-items: center;
-  .galeria {
-    width: 400px;
-    height: 650px;
-    background: var(--i);
-    background-size: cover;
+  width: 100%;
+  display: flex;
+  max-width: 1400px;
+  margin: auto;
+  .cartas {
+    width: 100%;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    transition: all 400ms ease-out;
+    cursor: default;
+  }
+  .cartas img {
+    width: 100%;
+    height: 440px;
   }
   .texto {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: transparent;
-    opacity: 0;
-    transition: 0.5s;
+    padding: 15px;
+    text-align: center;
     p {
-      font-size: 15px;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      font-weight: bold;
-      text-align: center;
-      width: 250px;
-      color: #000;
-      text-shadow: #fff 5px 0 5px;
+      line-height: 1.8;
+      color: #6a6a6a;
+      font-size: 14px;
+      margin-bottom: 5px;
     }
-  }
-  .galeria:hover .texto {
-    opacity: 1;
+    a {
+      display: inline-block;
+      padding: 10px;
+      margin-top: 10px;
+      color: #2a2a2a;
+      border: 1px solid #2a2a2a;
+      border-radius: 4px;
+      transition: all 400ms ease;
+      margin-bottom: 5px;
+    }
+    a:hover {
+      background: #2a2a2a;
+      color: #fff;
+    }
   }
 }
 
@@ -66,13 +70,9 @@
     }
   }
   .tarjeta_ss {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-    grid-gap: 10px;
-    .galeria {
-      width: 95vw;
-      height: 300px;
+    flex-wrap: wrap;
+    .cartas {
+      margin: 15px;
     }
   }
 }
@@ -85,14 +85,12 @@
     }
   }
   .tarjeta_ss {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-    grid-gap: 5px;
-    .galeria {
-      width: auto;
-      min-width: 90vw;
-      height: 300px;
+    flex-wrap: wrap;
+    .cartas {
+      margin: 15px;
+    }
+    .cartas img {
+      height: 600px;
     }
   }
 }
@@ -103,19 +101,14 @@
       height: 500px;
     }
   }
-  .tarjeta_ss {
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    justify-content: center;
-    grid-gap: 10px;
-    .galeria {
-      width: 45vw;
-      height: 400px;
-    }
-  }
 }
 //escritorio
 @media (min-width: 1025px) {
+  .tarjeta_ss {
+    .cartas:hover {
+      transform: translateY(-3%);
+    }
+  }
   .h2_ss {
     font-size: 3em;
   }
