--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -30,10 +30,10 @@ header {
     width: 100%;
   }
   .collapse li a {
-    color: #fff;
+    color: #2a2a2a;
+    font-weight: bold;
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    text-shadow: #000 1px 0 5px;
   }
   .navbar-brand {
     font-family: "Roboto Slab", serif;
@@ -70,11 +70,6 @@ footer {
       color: #2a2a2a;
       font-size: 60px;
       font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    }
-    p {
-      font-family: sans-serif;
-      color: #4e4a49;
-      font-size: 20px;
     }
   }
   img {
